[metadata]
name = slisemap
version = 1.0.2
author = Anton Björklund, Jarmo Mäkelä, and Kai Puolamäki
author_email = anton.bjorklund@helsinki.fi, jarmo.makela@helsinki.fi, kai.puolamaki@helsinki.fi
description = SLISEMAP: Combine local explanations with supervised dimensionality reduction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edahelsinki/slisemap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Visualization
license = MIT
license_files = LICENSE
keywords =
    Explainable AI
    Local explanation
    Dimensionality reduction
    Manifold visualization

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.19
    matplotlib >= 3.3
    seaborn >= 0.11
    torch >= 1.9

[options.extras_require]
all_plots = 
    pandas >= 1.1
    scikit-learn >= 0.24

[options.packages.find]
exclude =
    .github
    examples
    experiments
    data
    docs
    tests
